# Music-Composing-DL

./: app.py  main.ipynb  pyproject.toml  requirements.txt  weights.pth
Music-Compoing-DL/: .gitignore  app.py  main.py  pyproject.toml
Music-Composing-DL/: app.py  pyproject.toml  requirements.txt
docs/: README.md
